chore: convert net/atos/zac/app/zaken Java package to Kotlin (#782)
Converted the net.atos.zac.app.zaken Java package to Kotlin.

Solves PZ-1866